{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 16,
  "lineage": "a0601449-1e19-0478-cfc4-fee8e53788a7",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-01T02:36:08.856-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/myfirstgcpproject-457214/global/firewalls/fwrule-allow-http80",
            "log_config": [],
            "name": "fwrule-allow-http80",
            "network": "https://www.googleapis.com/compute/v1/projects/myfirstgcpproject-457214/global/networks/vpc1",
            "priority": 1000,
            "project": "myfirstgcpproject-457214",
            "self_link": "https://www.googleapis.com/compute/v1/projects/myfirstgcpproject-457214/global/firewalls/fwrule-allow-http80",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "webserver-tag"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-01T02:36:08.369-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/myfirstgcpproject-457214/global/firewalls/fwrule-allow-ssh22",
            "log_config": [],
            "name": "fwrule-allow-ssh22",
            "network": "https://www.googleapis.com/compute/v1/projects/myfirstgcpproject-457214/global/networks/vpc1",
            "priority": 1000,
            "project": "myfirstgcpproject-457214",
            "self_link": "https://www.googleapis.com/compute/v1/projects/myfirstgcpproject-457214/global/firewalls/fwrule-allow-ssh22",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh-tag"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "myapp1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC",
                  "SEV_CAPABLE",
                  "SEV_LIVE_MIGRATABLE_V2"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20250415",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/myfirstgcpproject-457214/zones/us-central1-a/disks/myapp1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-05-01T02:42:57.887-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/myfirstgcpproject-457214/zones/us-central1-a/instances/myapp1",
            "instance_id": "9118655316995538126",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "V_-_C2ryC-I=",
            "metadata_startup_script": "#!/bin/bash\nsudo apt install -y telnet\nsudo apt install -y nginx\nsudo systemctl enable nginx\nsudo chmod -R 755 /var/www/html\nsudo mkdir -p /var/www/html/app1\nHOSTNAME=$(hostname)\nsudo echo \"\u003c!DOCTYPE html\u003e \u003chtml\u003e \u003cbody style='background-color:rgb(250, 210, 210);'\u003e \u003ch1\u003eWelcome to StackSimplify - WebVM App1 \u003c/h1\u003e \u003cp\u003e\u003cstrong\u003eVM Hostname:\u003c/strong\u003e $HOSTNAME\u003c/p\u003e \u [...]
            "name": "myapp1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.238.154.7",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/myfirstgcpproject-457214/global/networks/vpc1",
                "network_ip": "10.128.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/myfirstgcpproject-457214/regions/us-central1/subnetworks/us-central1-subnet",
                "subnetwork_project": "myfirstgcpproject-457214"
              }
            ],
            "project": "myfirstgcpproject-457214",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/myfirstgcpproject-457214/zones/us-central1-a/instances/myapp1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh-tag",
              "webserver-tag"
            ],
            "tags_fingerprint": "bxGr-HATClg=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_firewall.fw_http",
            "google_compute_firewall.fw_ssh",
            "google_compute_network.myvpc",
            "google_compute_subnetwork.mysubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/myfirstgcpproject-457214/global/networks/vpc1",
            "mtu": 0,
            "name": "vpc1",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "6656332145083974004",
            "numeric_id": "6656332145083974004",
            "project": "myfirstgcpproject-457214",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/myfirstgcpproject-457214/global/networks/vpc1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "mysubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-01T02:36:09.373-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.128.0.1",
            "id": "projects/myfirstgcpproject-457214/regions/us-central1/subnetworks/us-central1-subnet",
            "ip_cidr_range": "10.128.0.0/20",
            "name": "us-central1-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/myfirstgcpproject-457214/global/networks/vpc1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "myfirstgcpproject-457214",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/myfirstgcpproject-457214/regions/us-central1/subnetworks/us-central1-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 5297577987833527910
          },
          "dependencies": [
            "google_compute_network.myvpc"
          ]
        }
      ]
    }
  ]
}